--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-native-router-flux": "^3.39.2",
     "react-native-web": "0.0.97",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
+    "redux-offline": "^2.0.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.0.0"
   },
   "devDependencies": {
