--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,11 @@
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.44.2",
 		"react-native-cli": "^2.0.1",
+		"react-navigation": "^1.0.0-beta.11",
+		"react-redux": "^5.0.5",
+		"redux": "^3.6.0",
+		"redux-offline": "^2.0.0",
+		"redux-thunk": "^2.2.0",
 		"styled-components": "^2.0.0"
 	},
 	"devDependencies": {
