--- a/web/package.json
+++ b/web/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.6.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-native-router-flux": "^3.39.2",
     "react-native-web": "0.0.97",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-offline": "^2.0.0",
     "redux-thunk": "^2.2.0",
