headers and navigation

--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "history": "^4.6.1",
+    "native-base": "^2.1.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-native-web": "0.0.97",
